# ThinkingWithTypes

./: LICENSE  README.md
Chapter1/: Chapter1.cabal  README.md
Chapter1/src/: Exercises.hs
Chapter2/: Chapter2.cabal  README.md  package.yaml
Chapter2/src/: Main.hs
Chapter3/: Chapter3.cabal  README.md  package.yaml
Chapter3/src/: Main.hs
